Updating travis to use a newer distro and compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
-sudo: false
+sudo: required
+dist: trusty
 language: rust
 rust:
 - stable
 - beta
 - nightly
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.6
+    packages:
+    - gcc-5
+    - g++-5
+    - clang-3.6
